cleaning up, removed content directory in favor to keep image small