@@ -4,6 +4,7 @@
 FROM alpine:3.6
 
 LABEL maintainer="Maximilian Mayer <mayer.maximilian@gmail.com>"
+LABEL version="0.1.4"
 
 ENV SERVER_URL=https://localhost:4443 \
     RUNDECK_STORAGE_PROVIDER=file \
@@ -21,17 +22,6 @@ RUN apk update --no-cache && \
 RUN curl -sLo /opt/rundeck/bin/rundeck-launcher-2.10.0.jar http://dl.bintray.com/rundeck/rundeck-maven/rundeck-launcher-2.10.0.jar && \
 		curl -sLo /opt/rundeck/bin/rundeck-cli-1.0.21.jar https://github.com/rundeck/rundeck-cli/releases/download/v1.0.21/rundeck-cli-1.0.21-all.jar
 
-#    chown rundeck:rundeck /var/lib/rundeck/.ssh && \
-#    sed -i "s/export RDECK_JVM=\"/export RDECK_JVM=\"\${RDECK_JVM} /" /etc/rundeck/profile && \
-#    curl -Lo /var/lib/rundeck/libext/rundeck-slack-incoming-webhook-plugin-0.6.jar https://github.com/higanworks/rundeck-slack-incoming-webhook-plugin/releases/download/v0.6.dev/rundeck-slack-incoming-webhook-plugin-0.6.jar && \
-#    echo 'd23b31ec4791dff1a7051f1f012725f20a1e3e9f85f64a874115e46df77e00b5  rundeck-slack-incoming-webhook-plugin-0.6.jar' > /tmp/rundeck-slack-plugin.sig && \
-#    cd /var/lib/rundeck/libext/ && \
-#    shasum -a256 -c /tmp/rundeck-slack-plugin.sig && \
-#    cd - && \
-#    apt-get clean && \
-#    rm -rf /var/lib/apt/lists/*
-#
-ADD content/ /
 RUN chmod u+x /opt/run && \
     mkdir -p /var/log/supervisor && mkdir -p /opt/supervisor && \
     chmod u+x /opt/supervisor/rundeck && chmod u+x /opt/supervisor/mysql_supervisor
@@ -40,10 +30,6 @@ ADD ./start.sh .
 
 EXPOSE 4440 4443
 
-VOLUME  ["/etc/rundeck", "/var/rundeck", "/var/lib/rundeck", "/var/lib/mysql", "/var/log/rundeck", "/opt/rundeck-plugins", "/var/lib/rundeck/logs", "/var/lib/rundeck/var/storage"]
-# run as rundeck user
-#USER rundeck
+VOLUME  ["/etc/rundeck", "/var/rundeck", "/var/lib/rundeck", "/var/lib/mysql", "/var/log/rundeck", "/opt/rundeck-plugins"]
 
-#ENTRYPOINT ["/usr/bin/java"]
 ENTRYPOINT ./start.sh
-#CMD ["-XX:MaxPermSize=256m", "-Xmx1024m", "-jar", "/opt/rundeck/bin/rundeck-launcher-2.10.0.jar", "-c" , "/etc/rundeck"]
